--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
         .app-card { cursor: pointer; transition: all 0.2s ease-in-out; }
         .app-card:hover { transform: translateY(-5px); box-shadow: 0 4px 20px rgba(0,0,0,0.1); }
         .gallery-image { cursor: pointer; border: 1px solid #dee2e6; }
+        .btn {min-width: 150px;}
     </style>
 </head>
 <body>
 
     <nav class="navbar navbar-expand-lg navbar-light bg-white border-bottom">
         <div class="container py-2 justify-content-start">
-            <img id="storeLogo" src="gingee.png" width="80px"/><a class="navbar-brand" href="#" id="storeName">Gingee App Store</a>
+            <img id="storeLogo" src="gingee.png" width="80px"/><h2><a class="navbar-brand" href="#" id="storeName">Gingee App Store</a></h2>
         </div>
     </nav>
 
@@ -40,7 +41,7 @@
     </main>
 
     <!-- Modal for showing the Install Command -->
-    <div class="modal fade" id="installModal" tabindex="-1">
+    <div class="modal modal-lg fade" id="installModal" tabindex="-1">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
